# cometa-next-django

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml
backend/: entrypoint  manage.py  pyproject.toml  test.sh
backend/config/: asgi.py  base.py  develop.py  urls.py  wsgi.py
backend/onlybeer/api/: urls.py
backend/onlybeer/api/v1/: urls.py
backend/onlybeer/api/v1/customers/: customers_serializer.py  customers_view.py
backend/onlybeer/api/v1/orders/: orders_serializer.py  orders_view.py
backend/onlybeer/api/v1/products/: products_serializer.py  products_view.py
backend/onlybeer/core/: admin.py  apps.py
backend/onlybeer/core/const/: __init__.py  status.py
backend/onlybeer/core/migrations/: 0001_initial.py  0002_remove_order_total.py  0003_remove_order_order_date.py
backend/onlybeer/core/models/: __init__.py  base_model.py  customer.py  invoice.py  order.py  order_detail.py  product.py
backend/onlybeer/core/services/: __init__.py  order_service.py
backend/onlybeer/core/tests/: tests_orders.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: customerCard.tsx  header.tsx  navbar.tsx  orderCard.tsx  orderCardDetail.tsx  productCard.tsx
frontend/src/app/customers/: page.tsx
frontend/src/app/hooks/: useFetchData.tsx  useOrdersData.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/orders/[order]/: page.tsx
frontend/src/app/products/: page.tsx
